show signin state

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=""
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
-NEXT_PUBLIC_FIREBASE_APP_ID=""
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyD7wO2yFoSXEG_XBZN7PdA9pJ4fSaEp12o"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="friendlyeatscodelab-54d7f.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="friendlyeatscodelab-54d7f"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="friendlyeatscodelab-54d7f.firebasestorage.app"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="946478113086"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:946478113086:web:0ce0059f464c2286218c6f"
+
+
